package com.ameya.livefront.userdirectory.util

object Constants {
    const val USER_LIST_TEST_TAG = "USER_LIST_TEST_TAG"
    const val USER_SEARCH_FIELD_TEST_TAG = "USER_SEARCH_FIELD_TEST_TAG"
    const val USER_LIST_LAYOUT_ERROR_TEXT_TEST_TAG = "USER_LIST_LAYOUT_ERROR_TEXT_TEST_TAG"
    const val USER_LIST_LAYOUT_LOADING_INDICATOR_TEST_TAG = "USER_LIST_LAYOUT_LOADING_INDICATOR_TEST_TAG"
    const val USER_DETAIL_TEST_TAG = "USER_DETAIL_TEST_TAG"
}