<resources>
    <string name="app_name">User Directory</string>

    <string name="search_placeholder">Search…</string>
    <string name="search_leading_icon_content_desc">Search</string>
    <string name="search_trailing_icon_content_desc">Clear search</string>

    <string name="image_content_description">Photo of %1$s</string>
    <string name="phone">Phone</string>
    <string name="cell_phone">Cell</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="timezone">Timezone</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>

    <string name="error_loading_users">Error loading users</string>

    <string name="no_app_to_handle_action">No app available to handle this action</string>

</resources>